--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 
 <head>
 <title>Recorrido de límites contrastados atravesados por la gradualidad</title>
+<style type="text/css">
+<!--
+body {
+scrollbar-face-color: #6685CA; 
+scrollbar-highlight-color: #6685CA; 
+scrollbar-shadow-color: #6685CA; 
+scrollbar-3dlight-color:#FFFFFF;
+scrollbar-arrow-color:#FFFFFF; 
+scrollbar-track-color:#E5E5E5; 
+scrollbar-drakshadow-color:#000000;
+}
+-->
+</style>
 </head>
 
 <img src="img/rectanguloblanco.png" style="margin: 0px 0px 0px 24.5%;float: left;position:fixed;max-width:100%, opacity:0.01" />
@@ -50,14 +63,13 @@ window.onload=new Function("setTimeout('movecube()',delay)")
 
 <img src="img/mapa4.png" style="margin: 20px 0px 0px 0px;float: left; position:fixed;float:left;opacity: 0.8;max-width:20%"/>
 
+
 <img src="img/cuadrado.png" style="margin: 70px 10px 50px 40px;float: left;position:fixed;max-width:7%" />
-
-
 
 <body>
 <div class="menu_simple">
 <ul>
-<li><a href="#">Hospedería de la Entrada</a></li> 
+<li><a href="#Hospedería de la Entrada">Hospedería de la Entrada</a></li> 
 <li><A HREF="#Taller del Escultor"> Taller del Escultor</A></li>
 <li><A HREF="#Taller de Prototipos"> Taller del Prototipos</A></li>
 <li><A HREF="#Hospedería Rosa de los vientos"> Hospedería Rosa de los vientos</A></li>
@@ -65,7 +77,7 @@ window.onload=new Function("setTimeout('movecube()',delay)")
 </ul>
 </div>
 
-
+<A NAME="Hospedería de la Entrada"> </A>
  <h2>Recorrido de límites contrastados atravesados por la gradualidad </h2>
 
  <h3> Mantos de Gea </h3>
