--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
 
 <head>
 <title>Recorrido de límites contrastados atravesados por la gradualidad</title>
-<style type="text/css">
-<!--
-body {
-scrollbar-face-color: #6685CA; 
-scrollbar-highlight-color: #6685CA; 
-scrollbar-shadow-color: #6685CA; 
-scrollbar-3dlight-color:#FFFFFF;
-scrollbar-arrow-color:#FFFFFF; 
-scrollbar-track-color:#E5E5E5; 
-scrollbar-drakshadow-color:#000000;
-}
--->
-</style>
+
 </head>
 
 <img src="img/rectanguloblanco.png" style="margin: 0px 0px 0px 24.5%;float: left;position:fixed;max-width:100%, opacity:0.01" />
@@ -67,6 +55,9 @@ window.onload=new Function("setTimeout('movecube()',delay)")
 <img src="img/cuadrado.png" style="margin: 70px 10px 50px 40px;float: left;position:fixed;max-width:7%" />
 
 <body>
+
+
+
 <div class="menu_simple">
 <ul>
 <li><a href="#Hospedería de la Entrada">Hospedería de la Entrada</a></li> 
@@ -90,7 +81,7 @@ Se inicia un recorrido dentro de la planta baja de la ciudad abierta, en donde s
 Se presenta un recorrido en el cual su trascurso se basa principalmente en la gradualidad, vale decir, el pasar a través de etapas compuestas por diferentes elementos naturales y contruidos. Durante el primer tramo de este pasar se utiliza como puntos donde el inicio es la entrada a la ciudad abierta y el punto de término es la hospería de la entrada. 
 </P>
 <P>
-Se trae a presencia lo a través del acuarela y el pincel como representante de lo natural. Dentro de ello se observa como es aquel paso generador de totalidades. En éste primer tramo se presenta mayormente naturaleza como recepción al lugar; donde el pasar se presenta como un contraste difuso como luz que permite cambiar de plano donde hay una nueva capa en la cual la distancia se presenta como un cambio de intensidad.
+Se trae a presencia lo observado a través del acuarela y el pincel como representante de lo natural. Dentro de ello se observa como es aquel paso generador de totalidades. En éste primer tramo se presenta mayormente naturaleza como recepción al lugar; donde el pasar se presenta como un contraste difuso como luz que permite cambiar de plano donde hay una nueva capa en la cual la distancia se presenta como un cambio de intensidad.
 </P>
 <h4 >
 Dirigidos por los profesores Claudio Girola I. y Godofredo Iommi M., durante los años 1981 - 1983.
